--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
+    "preinstall": "npx prisma generate",
     "dev": "next dev",
-    "prisma:generate": "prisma generate",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
