--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "react-router-dom": "^6.24.1",
     "react-scroll": "^1.9.0",
     "react-spinners": "^0.13.8",
+    "recharts": "^2.12.7",
     "resend": "^3.3.0",
     "sonner": "^1.5.0",
     "stripe": "^16.2.0",
