resend + bookingForm loader

--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
 DATABASE_URL="postgresql://creaty_owner:lfpxto6Nk2Pz@ep-broad-limit-a2jjq5qi.eu-central-1.aws.neon.tech/salon?sslmode=require"
+RESEND_API_KEY="re_GUoWYDpv_CJWzL1tnepH6eof2CSwu6MMU"
