--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "react-hook-form": "^7.52.0",
     "react-icons": "^5.2.1",
     "react-loader-spinner": "^6.1.6",
+    "react-query": "^3.39.3",
     "react-router-dom": "^6.24.1",
     "react-scroll": "^1.9.0",
     "react-spinners": "^0.13.8",
